--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 *,
 html,
 body {
-  font-family: "Roboto", serif;
+  font-family: "Poppins", serif;
+
+  opacity: 0.8;
+}
+
+.menu-item.active,
+.menu-item:hover {
+  @apply bg-[#5D5FEF] text-white font-semibold;
 }
