--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 
 *,
 html,
 body {
   font-family: "Poppins", serif;
+}
+
+.dm-sans-font {
+  font-family: "DM Sans", serif;
+}
+
+.roboto-font {
+  font-family: "Roboto", serif;
 }
 
 .menu-item.active,
@@ -24,6 +34,36 @@ body {
     }
 
     .icon-inactive {
+      display: none;
+    }
+  }
+}
+
+.slick-slide > div > div {
+  outline: none;
+}
+
+.slick-dots {
+  bottom: 20px !important;
+  display: flex !important;
+  justify-content: center;
+
+  li {
+    width: auto !important;
+    height: auto !important;
+  }
+
+  .slick-active button {
+    background-color: #000 !important;
+  }
+
+  button {
+    width: 12px !important;
+    height: 12px !important;
+    background-color: #fff !important;
+    border-radius: 50px;
+
+    &:before {
       display: none;
     }
   }
